--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <h1 class="section-title">
       Github <span class="red boldtext">Statistics</span>
     </h1>
-    <div class="statistics-container">
+    <!-- <div class="statistics-container">
       <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=uvsingh007"
         alt="github-stats-card" />
 
@@ -273,7 +273,7 @@
       <img id="github-streak-stats"
         src="https://github-readme-streak-stats.herokuapp.com/?user=uvsingh007&ring=5094f0&currStreakLabel=5094f0&fire=5094f0&theme=city_light"
         alt="github-streak-stats" />
-    </div>
+    </div> -->
     <div  class="react-activity-calendar">
       <img style="width: 100%;" src="https://ghchart.rshah.org/uvsingh007" alt="">
     </div>
